@@ -276,11 +276,6 @@ std::string Config::_defaults =
   "#      and any trailing '.value'.\n"
   "rule.precedence.color=due.today,active,blocking,blocked,overdue,due,scheduled,keyword.,project.,tag.,uda.,recurring,pri.,tagged,completed,deleted\n"
   "\n"
-  "# Shadow file support\n"
-  "#shadow.file=/tmp/shadow.txt                   # Location of shadow file\n"
-  "#shadow.command=list                           # Task command for shadow file\n"
-  "#shadow.notify=on                              # Footnote when updated\n"
-  "\n"
   "#default.project=foo                           # Default project for 'add' command\n"
   "#default.priority=M                            # Default priority for 'add' command\n"
   "#default.due=eom                               # Default due date for 'add' command\n"
