@@ -175,9 +175,6 @@ int CmdShow::execute (std::string& output)
     " row.padding"
     " rule.precedence.color"
     " search.case.sensitive"
-    " shadow.command"
-    " shadow.file"
-    " shadow.notify"
     " shell.prompt"
     " tag.indicator"
     " taskd.server"
